# null-safety-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run-tests.yml
examples/: CMakeLists.txt  main.cpp
include/null-safety/: nonull_ptr.h  null-safety.h  nullable_ptr.h
include/null-safety/pointer/: nonull_ptr.h  nullable_ptr.h
include/null_safety/: null_safety.h
src/: null_safety.cpp
tests/: CMakeLists.txt  nonnull_ptr_test.cpp  nullable_ptr_test.cpp
tests/utility/: type_traits.h  type_traits_test.cpp  utility.h
